@@ -37,6 +37,8 @@ existing way.
 * Auto proxy setup with environment variables (http_proxy, HTTP_PROXY)
 * Support for official ReTweet.
 * Added some format specifiers of tweets.
+* Support for recursive format specifiers such as
+  "%FILL{%FACE[bold]{%C{%m/%d}}: %T}".
 * Displaying image files without temporary files.
 * Support multiple buffers, where their name is derived from timeline spec.
 * Multiple initial timelines by setting a list of timeline spec strings to
